[gd_scene load_steps=5 format=3 uid="uid://bf7nobsdrpasm"]

[ext_resource type="Theme" uid="uid://cvwjahm5f0aft" path="res://Assets/Others/main_theme.tres" id="1_qmd1x"]
[ext_resource type="Script" uid="uid://bkwqrxfebqxun" path="res://Scripts/stat_panel.gd" id="2_pc5kx"]
[ext_resource type="Texture2D" uid="uid://c0dcoth0u6wbm" path="res://Assets/Others/arrow_button4.png" id="3_tfpey"]
[ext_resource type="Texture2D" uid="uid://bp6xxlabmlpm1" path="res://Assets/Others/arrow_button3.png" id="4_i4h3f"]

[node name="StatPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 168.0
offset_bottom = 40.0
theme = ExtResource("1_qmd1x")
script = ExtResource("2_pc5kx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(108.71, 0)
layout_mode = 2

[node name="Name" type="Label" parent="HBoxContainer/NameContainer"]
layout_mode = 2
text = "Stat Name"

[node name="ValueContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(25.045, 0)
layout_mode = 2

[node name="Value" type="Label" parent="HBoxContainer/ValueContainer"]
layout_mode = 2
text = "0"

[node name="Decrease" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("3_tfpey")
flat = true

[node name="Increase" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_i4h3f")
flat = true

[connection signal="pressed" from="HBoxContainer/Decrease" to="." method="_on_decrease_pressed"]
[connection signal="pressed" from="HBoxContainer/Increase" to="." method="_on_increase_pressed"]
